fixed social links on small display

--- a/social.css
+++ b/social.css
@@ -257,18 +257,23 @@ img {
 .hex-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 .top-row {
-    transform: translateY(93px); 
+    /* transform: translateY(93px); */
+    margin-top: 1%;
 }
 
 .mid-row {
-    
+    margin-top: -5%;    
 }
 
 .bot-row {
-    transform: translateY(-93px); 
+    /* transform: translateY(-93px); */
+    margin-top: -5%;
 }
 
 .hex-item {
